Fix regx and Add test

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<script src="triangle.js" type="text/javascript" charset="UTF-8"></script>
+	<script src="test.js" type="text/javascript" charset="UTF-8"></script>
 	<link href="css.css" rel="stylesheet" type="text/css">
 	<title>マイヤーズの三角形問題</title>
 </head>
@@ -20,18 +21,18 @@
 		</div>
 		<div>
 			<p>
-				辺A : <input id="SIDE_A" type="number" maxlength="5" max="99999" min="1">
+				辺A : <input id="SIDE_A" maxlength="16" max="99999" min="1">
 			</p>
 
 			<p>
-				辺B : <input id="SIDE_B" type="number" maxlength="5" max="99999" min="1">
+				辺B : <input id="SIDE_B" maxlength="16" max="99999" min="1">
 			</p>
 
 			<p>
-				辺C : <input id="SIDE_C" type="number" maxlength="5" max="99999" min="1">
+				辺C : <input id="SIDE_C" maxlength="16" max="99999" min="1">
 			</p>
 			<p>
-				<center><button onclick="main()">表示</button></center>
+				<center><button onclick="getElementValues()">表示</button></center>
 			</p>
 			</div>
 
