fix cache problem

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<script src="triangle.js" type="text/javascript" charset="UTF-8"></script>
+	<script src="triangle2.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="test.js" type="text/javascript" charset="UTF-8"></script>
 	<title>マイヤーズの三角形問題テスト</title>
 </head>
