--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<meta name="viewport" content="width=640, minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<script src="triangle.js" type="text/javascript" charset="UTF-8"></script>
+	<meta http-equiv="Pragma" content="no-cache" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="expires" content="0" />
+	<script src="triangle2.js" type="text/javascript" charset="UTF-8"></script>
 	<script src="test.js" type="text/javascript" charset="UTF-8"></script>
 	<link href="css.css" rel="stylesheet" type="text/css">
 	<title>マイヤーズの三角形問題</title>
@@ -21,15 +24,15 @@
 		</div>
 		<div>
 			<p>
-				辺A : <input id="SIDE_A" maxlength="16" max="99999" min="1">
+				辺A : <input id="SIDE_A" maxlength="5">
 			</p>
 
 			<p>
-				辺B : <input id="SIDE_B" maxlength="16" max="99999" min="1">
+				辺B : <input id="SIDE_B" maxlength="5">
 			</p>
 
 			<p>
-				辺C : <input id="SIDE_C" maxlength="16" max="99999" min="1">
+				辺C : <input id="SIDE_C" maxlength="5">
 			</p>
 			<p>
 				<center><button onclick="getElementValues()">表示</button></center>
